Serve prescription complete, pending test
